--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,7 @@
 body {
   font-family: var(--main-font);
   color: var(--main-normal-text-color);
+  max-width: 1600px;
 }
 
 .container {
@@ -91,6 +92,11 @@ nav {
   letter-spacing: 2%;
 }
 
+.contact-link-icon {
+  margin-right: 10px;
+  color: var(--main-text-color);
+}
+
 .menu-container .logo {
   font-family: var(--primary-font);
   font-size: 26px;
@@ -114,10 +120,13 @@ nav {
 }
 
 .main-header {
-  background-color: #2f303a;
   height: 600px;
   line-height: 1.36;
   text-align: center;
+  background-image: url("../images/header-img.jpg");
+  background-size: contain;
+  box-shadow: inset 50px 50px 50px 50px rgba(47, 48, 58, 0.4),
+    inset 1600px 600px 50px 50px rgba(47, 48, 58, 0.4);
 }
 
 .main-header .container {
